Fix li spacing on page template

--- a/css/index.css
+++ b/css/index.css
@@ -81,7 +81,8 @@ img {
   max-width: var(--max-content-width);
 }
 p,
-.tmpl-post li {
+.tmpl-post li,
+.tmpl-page li {
   line-height: 1.45;
 }
 
@@ -90,6 +91,10 @@ a[href] {
 }
 a[href]:visited {
   color: var(--text-colour-link-visited);
+}
+
+h1 {
+  margin: 1rem 0;
 }
 
 main {
